# hw1-norm-forms

./: README.md  hw1-norm-forms.cabal
.github/workflows/: haskell.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Formula.hs
test/: MyLibTest.hs
