cabal-version:      2.4
name:               hw1-norm-forms
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             klimoza
maintainer:         i220303@mail.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library mylib
    exposed-modules:  Formula

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hw1-norm-forms-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          FormulaTests.hs
    build-depends:    tasty, tasty-hunit, mylib
